--- a/Contact.html
+++ b/Contact.html
@@ -16,35 +16,41 @@
 			
 		<div id="Nav">
 			<Nav>
+			<ul>	
 				<li><a href="#">About</a></li>
 				<li><a href="file:///Users/MrJourdain/Desktop/Coding/Homework/Basic-Portfolio/Contact.html">Contact</a></li>
 				<li><a href="#">Portfolio</a></li>
-				
+			</ul>
 			</nav>
 		</div>
 
-	</div>
+
 		
-		<DIV>
+		
 			<h2>Connect With Me</h2>
-				<li><a href="https://github.com/MrJourdain"><img src="https://cdn0.iconfinder.com/data/icons/social-media-logos-free/32/social_media_logo_github-128.png"></a></li>
-					<li><a href="https://www.linkedin.com/in/david-jourdain-5739b135
-								"><img src="https://cdn3.iconfinder.com/data/icons/social-media-set-3/60/linkedin-128.png"></a></li>
-					<li><a href="http://stackoverflow.com/users/6492634/dav%C3%ADd-emmanuel-jourdain"><img src="http://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a"></a></li>
-		</DIV>
+				
+				<a href="https://github.com/MrJourdain"><img src="https://cdn0.iconfinder.com/data/icons/social-media-logos-free/32/social_media_logo_github-128.png" alt="giticon"> </a>
+					<a href="https://www.linkedin.com/in/david-jourdain-5739b135
+								"><img src="https://cdn3.iconfinder.com/data/icons/social-media-set-3/60/linkedin-128.png" alt="linkdicon"></a>
+					<a href="http://stackoverflow.com/users/6492634/dav%C3%ADd-emmanuel-jourdain"><img src="http://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt="flowstack"></a>
+		
 
-		<div <form action="contact.php" method="post">
-    Your name<br>
-    <input type="text" name="cf_name"><br>
-    Your e-mail<br>
-    <input type="text" name="cf_email"><br>
-    Message<br>
-    <textarea name="cf_message">
-	
+ 
 
-	<div>
-		<footer> &copy Copyright 2016 David Jourdain</footer>
-	</div>	 
+		<form action="contact.php" method="post"><br>
+	    Your name</form>
+	    <input type="text" name="cf_name"><br>
+	    Your e-mail<br>
+	    <input type="text" name="cf_email"><br>
+	    Message<br>
+	    <textarea name="cf_message"></textarea>
+
+
+			<footer> &copy; Copyright 2016 David Jourdain </footer>
 
 	</body>
+
 </html>
+
+
+
