--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,49 +16,46 @@
 			
 		<div id="Nav">
 			<Nav>
+			<ul>	
 				<li><a href="#">About</a></li>
 				<li><a href="file:///Users/MrJourdain/Desktop/Coding/Homework/Basic-Portfolio/Contact.html">Contact</a></li>
 				<li><a href="#">Portfolio</a></li>
-				
+			</ul>
 			</nav>
 		</div>
 
-	<div id="Section">
+	
 		<h2>Hangman</h2>
-	</div>
+	
 
-	<div id="Section">
+	
 		<h2>RPG Game</h2>
-	</div>
+	
 
-	<div id="Section">
+	
 		<h2>Trivia Game</h2>
-	</div>
 
-	<div id="Section">
+
+	
 		<h2>Rock Paper Scissors</h2>
-	</div>
 
-	<div id="Section">
+
+	\
 		<h2>UCF Info Widget</h2>
-	</div>
+	
 
-	<div> 
-		
-
-	</div>
 		
 		<DIV>
 			<h2>Connect With Me</h2>
-				<li><a href="https://github.com/MrJourdain"><img src="https://cdn0.iconfinder.com/data/icons/social-media-logos-free/32/social_media_logo_github-128.png"></a></li>
-					<li><a href="https://www.linkedin.com/in/david-jourdain-5739b135
-								"><img src="https://cdn3.iconfinder.com/data/icons/social-media-set-3/60/linkedin-128.png"></a></li>
-					<li><a href="http://stackoverflow.com/users/6492634/dav%C3%ADd-emmanuel-jourdain"><img src="http://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a"></a></li>
+				
+
+				<a href="https://github.com/MrJourdain"><img src="https://cdn0.iconfinder.com/data/icons/social-media-logos-free/32/social_media_logo_github-128.png" alt="giticon"> </a>
+					<a href="https://www.linkedin.com/in/david-jourdain-5739b135
+								"><img src="https://cdn3.iconfinder.com/data/icons/social-media-set-3/60/linkedin-128.png" alt="linkdicon"></a>
+					<a href="http://stackoverflow.com/users/6492634/dav%C3%ADd-emmanuel-jourdain"><img src="http://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt="flowstack"></a>
 		</DIV>
 
-	<div>
-		<footer> &copy Copyright 2016 David Jourdain</footer>
-	</div>	 
+		<footer> &copy;Copyright 2016 David Jourdain</footer>
 
 	</body>
 </html>
