--- a/Index.html
+++ b/Index.html
@@ -3,28 +3,26 @@
 	
 	<head>
 		<title>David Jourdain</title>
+		<link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
 	</head>
 
 	<body>
 
 		<header>
-			<div id="Header">
-				<h1>David Jourdain</h1>
-			</div>
-		
+			<h1>David Jourdain</h1>
 		</header>
 			
-		<div id="Nav">
+		<div class="Nav">
 			<Nav>
 			<ul>	
-				<li><a href="#">About</a></li>
-				<li><a href="file:///Users/MrJourdain/Desktop/Coding/Homework/Basic-Portfolio/Contact.html">Contact</a></li>
-				<li><a href="#">Portfolio</a></li>
+				<li><a href="index.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
 			</ul>
 			</nav>
 		</div>
 
-	<div id="Section">
+	<div class="Section">
 		<h2>About Me</h2>
 		<p>My name is David Emmanuel Jourdain. I was born July 5th 1988 in Nyack, New York. I am a very curious person and as a result I tend to be able to speak on any topic with some level of familiarity. I am currently engaged to my girlfriend of 9yrs, and we have a rambunctious 2 year-old named Carter who keeps us very busy. I have too many interests to list them all but I guess you could say I am into anything that could potentially be the topic of a TED Talk.I am pretty open, so anything you need to know is on this site and for anything else you would like to know just ask !</p>
 	</div>
