--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,34 +17,20 @@
 		<div id="Nav">
 			<Nav>
 			<ul>	
-				<li><a href="#">About</a></li>
-				<li><a href="file:///Users/MrJourdain/Desktop/Coding/Homework/Basic-Portfolio/Contact.html">Contact</a></li>
-				<li><a href="#">Portfolio</a></li>
+				<li><a href="index.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
 			</ul>
 			</nav>
 		</div>
 
 	
 		<h2>Hangman</h2>
-	
-
-	
 		<h2>RPG Game</h2>
-	
-
-	
 		<h2>Trivia Game</h2>
-
-
-	
 		<h2>Rock Paper Scissors</h2>
-
-
-	\
 		<h2>UCF Info Widget</h2>
 	
-
-		
 		<DIV>
 			<h2>Connect With Me</h2>
 				
